# SOS_Pendant

./: .continueignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Doc/: Architecture.md  Firmware Reference.md  GoogleSheetScript.txt  Low-Power Mode for M5STACK StickS3.md
main/: CMakeLists.txt  app_main.cpp  config.hpp  network_manager.cpp  network_manager.hpp  ota_manager.cpp  ota_manager.hpp  shared_state.hpp
